--- a/client/src/components/ProjectCards/style.css
+++ b/client/src/components/ProjectCards/style.css
@@ -18,10 +18,9 @@
     font-weight: bolder;
 }
 
-.wrapper {
+.project-wrapper {
     display: grid;
     /* overflow: auto; */
-
 }
 
 .card-link {
